# super-productivity-cli

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  PKG-INFO  README.md  demo.json  package-lock.json  package.json  plan.md  pyproject.toml  sp.py  super_productivity_cli.py  test.py  tsconfig.json
.github/workflows/: publish.yml
project-tracking/: plan.md
src/: index.ts
src/commands/: index.ts
src/lib/: api-backend.ts  api-client.ts  backend.ts  compression.ts  config.ts  data-helpers.ts  dropbox-backend.ts  dropbox.ts  encryption.ts  output.ts  sync-file.ts  sync-processor.ts
tests/: fixtures.ts
tests/commands/: counter.test.ts  note.test.ts  state.test.ts  tag.test.ts  task.test.ts
tests/fixtures/: sync-data-empty.json  sync-data.json
tests/lib/: data-helpers.test.ts  output.test.ts
