[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "super-productivity-cli"
version = "0.1.0"
description = "A fast, lightweight, and powerful Command Line Interface for Super Productivity"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["super-productivity", "cli", "productivity", "task-manager", "time-tracking"]
authors = [
  { name = "Onur NESVAT", email = "onurnesvat@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
sp = "sp:main"

[project.entry-points."pipx.run"]
sp = "sp:main"

[project.urls]
Homepage = "https://github.com/onesvat/super-productivity-cli"
Repository = "https://github.com/onesvat/super-productivity-cli.git"
"Bug Tracker" = "https://github.com/onesvat/super-productivity-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["sp.py"]
